fix: don't allow user to close refresh popup; adjust spacing in stepper

--- a/src/app/features/credential-offer/credential-offer-steps/credential-offer-step/credential-offer-step.component.scss
+++ b/src/app/features/credential-offer/credential-offer-steps/credential-offer-step/credential-offer-step.component.scss
@@ -1,6 +1,10 @@
 
 @import "../../../../../styles/variables";
 
+p{
+  margin: 0px;
+}
+
 .credential-container {
   display: flex;
   flex-direction: column;
@@ -45,6 +49,11 @@
         display: block;
         text-align: center;
         font-style: italic;
+
+        small{
+          display: inline-block;
+          width: 80%;
+        }
       }
 
       .guide-text{
